master fix hero and add letter spacing

--- a/src/assets/styles/common.scss
+++ b/src/assets/styles/common.scss
@@ -106,6 +106,7 @@ body {
 
   &_bold {
     font-weight: 500;
+    letter-spacing: 0.01em;
   }
 }
 
